--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": ">=7.3",
         "illuminate/http": "^8.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/support": "^8.0"
+        "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
