--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=7.3",
-        "illuminate/http": "^8.0",
+        "illuminate/http": "^8.0|^9.0|^10.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "illuminate/support": "^8.0|^9.0|^10.0"
     },
